--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Space+Mono');
+@import url("https://fonts.googleapis.com/css?family=Space+Mono");
 
 body {
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   background-color: #dddfd4;
 }
 
@@ -21,7 +21,7 @@ body {
 }
 
 .grid-align-center {
-text-align: center;
+  text-align: center;
 }
 
 .grid-item1 {
